services/13ft/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "13ft"
  namespace: "13ft"
spec:
  selector:
    app: 13ft
  ports:
    - port: 5000
      targetPort: 5000
